--- a/Activity_Week 9/xhtml-javascript-form-validation/index.xhtml
+++ b/Activity_Week 9/xhtml-javascript-form-validation/index.xhtml
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="id" lang="id">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Form Validation (XHTML)</title>
+    <title>Form Validation (Mandiri)</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <script type="text/javascript">
         function fn_ValForm() {
@@ -71,4 +71,5 @@
         </form>
     </div>
 </body>
+
 </html>
