--- a/Activity_Week 9/activity-mandiri/index.xhtml
+++ b/Activity_Week 9/activity-mandiri/index.xhtml
@@ -1,10 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="id" lang="id">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Form Validation (External JS)</title>
+    <title>Form Validation (Mandiri)</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <!-- Panggil file JavaScript eksternal -->
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 
@@ -54,4 +53,5 @@
     </form>
 </div>
 </body>
+
 </html>
